Fixed z-index issue with Dice component and appearance of disabled buttons. Added state to control when Dice component is displayed. Adjusted file organisation.

--- a/frontend/src/styles/buttons.css
+++ b/frontend/src/styles/buttons.css
@@ -27,9 +27,19 @@
   background-color: grey;
 }
 
+.button:disabled:hover,
+.link-disabled:hover {
+  border: 1px solid grey;
+  background-color: grey;
+  box-shadow: none;
+  width: 9em;
+}
+
 .link-disabled {
   background-color: grey;
 }
+
+
 
 .button:active {
   border: 1px solid rgb(255, 130, 84);
